# Web-scraping

./: README.md  main.py  pyproject.toml
create_read_write/: filling_db.py  models.py
data/: author.json
